Fixed small issue with buttons not showing properly...

--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ div .bg {
   align-items: center;
 }
 
-.btn {
+#pls {
   border: none;
   color: white;
   margin: 15px auto;
@@ -281,7 +281,7 @@ div .row {
     max-height: 100%;
   }
 
-  .btn {
+  #pls {
     border: none;
     color: white;
     margin: 15px auto;
